--- a/index.html
+++ b/index.html
@@ -1,1 +1,154 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>NXTECH</title>
+</head>
+<body style="margin:0;">
+    <div class="root">
+        <div class="banner">
+            <div class="nav">
+                <nav>
+                    <div class="logo">
+                        N<span class="blue">X</span>TECH
+                    </div>
+                    <ul>
+                        <li>Home</li>
+                        <li>Services</li>
+                        <a href="contact.html"><li>Contact</li></a>
+                    </ul>
+                </nav>
+                <div class="right">
+                    <button class="loginbtn">login</button>
+                </div>
+            </div>
+            <div class="body">
+                <div class="BannerTitle">
+                    <h1>N<span class="blue">X</span>TECH</h1>
+                <h2>IT SOLUTIONS</h2>
+                <p>The all in one IT Solutions</p>
+                <button class="stproject">Build a project</button>
+                </div>
+                <div class="BannerImg">
+                    <img src="pc.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="triangle" style="z-index: 0;"></div>
+        <main>
+            <h2 class="heading">Lets Focus on Tech <br><span class="light">You Focus On Truly Matters.</span> </h2>
+            <p class="paragraph">We have experts ready to bring your Idea to life all the way from our kick off metting to our final handoff.</p>
+            <section>
+                <div class="services">
+                    <div class="card">
+                        <img src="webd.png" alt="">
+                        <h3>Web Development</h3>
+                        <p>Get a customized website tailored to meet your needs .......</p>
+                    </div>
 
+                    <div class="card">
+                        <img src="webd.png" alt="">
+                        <h3>Web Development</h3>
+                        <p>Get a customized website tailored to meet your needs .......</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="webd.png" alt="">
+                        <h3>Web Development</h3>
+                        <p>Get a customized website tailored to meet your needs .......</p>
+                    </div>
+                </div>
+            </section>
+            <section style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                <h2 style="width: 100%; text-align: center;">Core Values</h2>
+                <div class="values">
+                    <div class="v1">
+                        <div class="circle"></div>
+                        <div class="info">
+                            <h3>Creativity</h3>
+                        <p>Get a customized website tailored to meet your needs Get a customized website tailored to meet your needs your needs Get a customized website tailored to meet your needs .......</p>
+                        </div>
+                        
+                    </div>
+                    <div class="v1 rev">
+                        <div class="circle"></div>
+                        <div class="info">
+                            <h3>Commitment</h3>
+                        <p>Get a customized website tailored to meet your needs Get a customized website tailored to meet your needs your needs Get a customized website tailored to meet your needs .......</p>
+                        </div>
+
+                    </div>
+                    <div class="v1">
+                        <div class="circle"></div>
+                        <div class="info">
+                            <h3>Communication</h3>
+                        <p>Get a customized website tailored to meet your needs Get a customized website tailored to meet your needs your needs Get a customized website tailored to meet your needs .......</p>
+                        </div>
+                    </div>
+                </div>                
+            </section>
+            <section>
+                <h2 style="text-align: center;">Our Working Process</h2>
+                <div class="process">
+                    <div class="card">
+                        <img src="meeting.png" alt="">
+                        <h2>1. meeting</h2>
+                        <p>We setup a meeting and discuss about your next big project</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="planning.png" alt="">
+                        <h2>1. planning</h2>
+                        <p>We setup a meeting and discuss about your next big project</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="designing.png" alt="">
+                        <h2>1. Designing</h2>
+                        <p>We setup a meeting and discuss about your next big project</p>
+                    </div>
+                    <div class="card">
+                        <img src="develop.png" alt="">
+                        <h2>1. Development</h2>
+                        <p>We setup a meeting and discuss about your next big project</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="deploy.png" alt="">
+                        <h2>1. Deployment</h2>
+                        <p>We setup a meeting and discuss about your next big project</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="support.png" alt="">
+                        <h2>1. Support and Maintenance</h2>
+                        <p>We setup a meeting and discuss about your next big project</p>
+                    </div>
+                </div>
+            </section>
+            <section style="padding-inline: 5%;">
+                <div class="reachus">
+                    <div class="info">
+                        <h1 >N<span class="blue">X</span>TECH</h1>
+                        <p>We have experts ready to bring your project to life</p>
+                        <div class="contact">
+                            <p>(256)708162770<br>(256)708162770</p>
+                            <p>email@email.com</p>
+                        </div>
+                    </div>
+                    <div class="map">
+                        <img src="gm.jpg" alt="">
+                        <button style="border-radius: 5px; padding:10px; padding-inline: 30px; background-color: #359af9;color: white; margin: 5px 0 10px 0; ">Reach To Us</button>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+    <footer>
+        <center>NEXTECH IT SOLUTIONS</center>
+    </footer>
+</body>
+</html>
