--- a/contact.html
+++ b/contact.html
@@ -246,7 +246,7 @@
         <div class="row">
             <div class="in">
                 <label for="first">Full Names</label>
-            <input type="text" name="first" placeholder="ex: John Doe">
+            <input type="text" name="first" placeholder="ex: John Doe" required>
             </div>
         </div>
         <div class="row">
@@ -256,7 +256,7 @@
             </div>
             <div class="in">
                 <label for="first">Telephone</label>
-            <input type="text" name="first" placeholder="ex:  256-701234567">
+            <input type="text" name="first" placeholder="ex:  256-701234567" required>
             </div>
         </div>
             <label for="textarea">Project Description</label>
