--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
-    <title>NXTECH</title>
+    <title>SCEC</title>
     <style>
       @media (max-width: 700px) {
         .stproject {
-            display: none;
+          display: none;
         }
       }
     </style>
@@ -19,23 +20,23 @@
       <div class="banner">
         <div class="nav">
           <nav>
-            <div class="logo">N<span class="blue">X</span>TECH</div>
-            <ul>
-              <li>Home</li>
-              <li>Services</li>
+            <div class="logo">SC<span class="blue">E</span>C</div>
+            <ul id="navi">
+              <a href="#" style="color:#359af9;"><li>Home</li></a>
+              <a href="services.html"><li>Services</li></a>
               <a href="contact.html"><li>Contact</li></a>
             </ul>
           </nav>
           <div class="right">
-            <button class="loginbtn">login</button>
+            <img src="menu.png" alt="menu" id="menu" />
           </div>
         </div>
         <div class="body">
           <div class="BannerTitle">
-            <h1>N<span class="blue">X</span>TECH</h1>
-            <h2>IT SOLUTIONS</h2>
-            <p>The all in one IT Solutions</p>
-            <button class="stproject">Build a project</button>
+            <h1 style="font-family: blocky; letter-spacing: 5px;">SC<span class="blue">E</span>C</h1>
+            <h2>TECHNOLOGIES</h2>
+            <p>Your all in one IT Solutions</p>
+            <a href="contact.html"><button style="cursor: pointer;" class="stproject">Build a project</button></a>
           </div>
           <div class="BannerImg">
             <img src="pc.png" alt="" />
@@ -45,37 +46,37 @@
       <div class="triangle" style="z-index: 0"></div>
       <main>
         <h2 class="heading">
-          Lets Focus on Tech <br /><span class="light"
-            >You Focus On Truly Matters.</span
+          Let us Focus on Tech <br /><span class="light"
+            >You Focus On What Truly Matters.</span
           >
         </h2>
         <p class="paragraph">
-          We have experts ready to bring your Idea to life all the way from our
-          kick off metting to our final handoff.
+          We have experts ready to bring your Idea to life, all the way from our
+          kick off meeting to our final handoff.
         </p>
         <section>
           <div class="services">
             <div class="card">
               <img src="webd.png" alt="" />
-              <h3>Web Development</h3>
+              <h3>Web & App Development</h3>
               <p>
-                Get a customized website tailored to meet your needs .......
+                We design all sorts of websites and Mobile Apps from personal to company.
               </p>
             </div>
 
             <div class="card">
-              <img src="webd.png" alt="" />
-              <h3>Web Development</h3>
+              <img src="digitalm.png" alt="" />
+              <h3>Digital Marketing</h3>
               <p>
-                Get a customized website tailored to meet your needs .......
+                We manage marketing of your business online to boost your sales
               </p>
             </div>
 
             <div class="card">
-              <img src="webd.png" alt="" />
-              <h3>Web Development</h3>
+              <img src="designing.png" alt="" />
+              <h3>Graphics and Branding</h3>
               <p>
-                Get a customized website tailored to meet your needs .......
+                We Design Business cards, Posters, Logos, Flyers and all sorts Graphics products
               </p>
             </div>
           </div>
@@ -95,9 +96,9 @@
               <div class="info">
                 <h3>Creativity</h3>
                 <p>
-                  Get a customized website tailored to meet your needs Get a
-                  customized website tailored to meet your needs your needs Get
-                  a customized website tailored to meet your needs .......
+                  We specialize in being creative and creating something very unique
+                   that suites your desires. We try not to recreate repetitive work
+                   from others.
                 </p>
               </div>
             </div>
@@ -106,9 +107,8 @@
               <div class="info">
                 <h3>Commitment</h3>
                 <p>
-                  Get a customized website tailored to meet your needs Get a
-                  customized website tailored to meet your needs your needs Get
-                  a customized website tailored to meet your needs .......
+                  Once we have a contract we are committed to work on your project
+                   and deliver the product in time yet creating something beautiful
                 </p>
               </div>
             </div>
@@ -117,9 +117,8 @@
               <div class="info">
                 <h3>Communication</h3>
                 <p>
-                  Get a customized website tailored to meet your needs Get a
-                  customized website tailored to meet your needs your needs Get
-                  a customized website tailored to meet your needs .......
+                  Our communication line are always up with a maximum response time of 12 hours.
+                  We keep communication between us and our clients open all the time.
                 </p>
               </div>
             </div>
@@ -136,47 +135,47 @@
 
             <div class="card">
               <img src="planning.png" alt="" />
-              <h2>1. planning</h2>
-              <p>We setup a meeting and discuss about your next big project</p>
+              <h2>2. planning</h2>
+              <p>Our team comes up with a plan on how to work on your project</p>
             </div>
 
             <div class="card">
               <img src="designing.png" alt="" />
-              <h2>1. Designing</h2>
-              <p>We setup a meeting and discuss about your next big project</p>
+              <h2>3. Designing</h2>
+              <p>A design to be used in your project is come up with </p>
             </div>
             <div class="card">
               <img src="develop.png" alt="" />
-              <h2>1. Development</h2>
-              <p>We setup a meeting and discuss about your next big project</p>
+              <h2>4. Development</h2>
+              <p>We then kick off development to deliver the best out of your project idea</p>
             </div>
 
             <div class="card">
               <img src="deploy.png" alt="" />
-              <h2>1. Deployment</h2>
-              <p>We setup a meeting and discuss about your next big project</p>
+              <h2>5. Deployment</h2>
+              <p>After Development is complete, we then deliver or launch your project</p>
             </div>
 
             <div class="card">
               <img src="support.png" alt="" />
-              <h2>1. Support and Maintenance</h2>
-              <p>We setup a meeting and discuss about your next big project</p>
+              <h2>6. Support and Maintenance</h2>
+              <p>We support you and maintain for you your project from its release till our contract expires</p>
             </div>
           </div>
         </section>
         <section style="padding-inline: 5%">
           <div class="reachus">
             <div class="info">
-              <h1>N<span class="blue">X</span>TECH</h1>
+              <h1 style="font-family: blocky; letter-spacing: 5px;">SC<span class="blue">E</span>C</h1>
               <p>We have experts ready to bring your project to life</p>
               <div class="contact">
-                <p>(256)708162770<br />(256)708162770</p>
-                <p>email@email.com</p>
+                <p>(256)708162770</p>
+                <p>tanish@scec.tech</p>
               </div>
             </div>
             <div class="map">
-              <img src="gm.jpg" alt="" />
-              <button
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.809932512003!2d32.56674887436962!3d0.11748596429849092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177d8fb396ef2bad%3A0xaff8dcb9fe0ee1a3!2skids%20pioneer%20school!5e0!3m2!1sen!2sug!4v1685106503468!5m2!1sen!2sug" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <a href="contact.html"><button
                 style="
                   border-radius: 5px;
                   padding: 10px;
@@ -184,17 +183,32 @@
                   background-color: #359af9;
                   color: white;
                   margin: 5px 0 10px 0;
+                  cursor: pointer;
                 "
               >
                 Reach To Us
-              </button>
+              </button></a>
+              
             </div>
           </div>
         </section>
       </main>
     </div>
     <footer>
-      <center>NEXTECH IT SOLUTIONS</center>
+      <center><span style="font-family: blocky; letter-spacing: 5px;">SCEC</span> TECHNOLOGIES</center>
     </footer>
+    <script src="code.jquery.com_jquery-3.6.0.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#menu").click(function () {
+          $("#navi").toggleClass("active");
+          if ($("#navi").hasClass("active")) {
+            $("#menu").attr("src","x.png");
+          }else{
+            $("#menu").attr("src","menu.png");
+          }
+        });
+      });
+    </script>
   </body>
 </html>
