--- a/public/contact.html
+++ b/public/contact.html
@@ -210,7 +210,7 @@
       <div class="body">
         <div class="BannerTitle">
           <h1 style="font-size: 3em; font-family: pristina">
-            Let's Talk About It
+            Let's Talk About IT
           </h1>
         </div>
         <div class="BannerImg">
@@ -218,20 +218,19 @@
         </div>
       </div>
       <div class="contacts">
-        <div class="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.809932512003!2d32.56674887436962!3d0.11748596429849092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177d8fb396ef2bad%3A0xaff8dcb9fe0ee1a3!2skids%20pioneer%20school!5e0!3m2!1sen!2sug!4v1685106503468!5m2!1sen!2sug" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="map" style="overflow: hidden;">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15959.240088663008!2d32.5690812!3d0.1168564!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177d8facfe517617%3A0xc0f205d116761762!2sscec%20technologies%20it%20solutions!5e0!3m2!1sen!2sug!4v1685716750091!5m2!1sen!2sug" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="givecall">
           <h2>Give Us A Call</h2>
-          <p>256-708-162-770</p>
+          <p>+256-708-162-770</p>
           <p>tanish@scec.tech</p>
-          <p>Kawuku Entebbe road next to Kids Pioneer primary school</p>
+          <p>Kawuku Entebbe road near Sai Pali Institute of Technology.</p>
         </div>
         <div class="pitchus">
           <h2>Pitch To Us</h2>
-          <p>
-            Hello, my name is <span class="blue">your name</span> and contacts are <span class="blue">your email</span> and <span class="blue">TEL</span> and
-            I would like to discuss about this <span class="blue">project</span>.
+          <p style="text-align: center;">
+            Start a conversation Below.
           </p>
           <a  href="#form"><button style="cursor: pointer;" class="stproject">start</button></a>
         </div>
@@ -240,33 +239,30 @@
     <div class="triangle" style="z-index: 0"></div>
     <main>
       <h1>Start a conversation</h1>
-      <ul>
-        <li>- less than 12-hours response time</li>
-        <li>- detailed explanation to your questions</li>
-      </ul>
-      <form action="" id="form">
+      
+      <form method="post" action="email.php" id="form">
         <div class="row">
             <div class="in">
-                <label for="first">Full Names</label>
-            <input type="text" name="first" placeholder="ex: John Doe" required>
+                <label for="name">Full Names</label>
+            <input type="text" name="name" placeholder="ex: John Doe" required>
             </div>
         </div>
         <div class="row">
             <div class="in">
-                <label for="first">Email Address</label>
-            <input type="text" name="first" placeholder="ex:  jumbamusa@gmail.com">
+                <label for="email">Email Address</label>
+            <input type="text" name="email" placeholder="ex:  jumbamusa@gmail.com">
             </div>
             <div class="in">
-                <label for="first">Telephone</label>
-            <input type="text" name="first" placeholder="ex:  256-701234567" required>
+                <label for="number">Telephone</label>
+            <input type="text" name="number" placeholder="ex:  +256-701234567" required>
             </div>
         </div>
-            <label for="textarea">Project Description</label>
-            <textarea name="" id="" cols="30" rows="10" name="textarea" placeholder="I would like to build for me a website for my Company and also manage my marketing aspects ….."></textarea>
+            <label for="message">Project Description</label>
+            <textarea name="message" id="" cols="30" rows="10" name="textarea" placeholder="I would like to entrust you with the development of a dynamic website for my company, along with the responsibility of managing our marketing and design needs......"></textarea>
             <div class="row" style="justify-content: space-around;">
                     <div style="display: flex; flex-direction: column; align-items: center; margin: 0;">
                         <label for="checkbox">Request Call</label>
-                    <input style="width: 20px; height: 20px ; border: 5px solid black;" type="checkbox" name="checkbox" id="">
+                    <input style="width: 20px; height: 20px ; border: 5px solid black;" type="checkbox" name="call"  value="call_requested" id="">
                     </div>
                 <input  style="margin:0; cursor: pointer;" class="stproject" type="submit" value="submit">
             </div>
