--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <title>SCEC</title>
     <style>
@@ -22,7 +22,7 @@
           <nav>
             <div class="logo">SC<span class="blue">E</span>C</div>
             <ul id="navi">
-              <a href="#" style="color:#359af9;"><li>Home</li></a>
+              <a href="#" style="color: #359af9"><li>Home</li></a>
               <a href="services.html"><li>Services</li></a>
               <a href="contact.html"><li>Contact</li></a>
             </ul>
@@ -33,10 +33,19 @@
         </div>
         <div class="body">
           <div class="BannerTitle">
-            <h1 style="font-family: blocky; letter-spacing: 5px;">SC<span class="blue">E</span>C</h1>
+            <h1 style="font-family: blocky; letter-spacing: 5px">
+              SC<span class="blue">E</span>C
+            </h1>
             <h2>TECHNOLOGIES</h2>
-            <p>Your all in one IT Solutions</p>
-            <a href="contact.html"><button style="cursor: pointer;" class="stproject">Build a project</button></a>
+            <p style="font-size: 1.3em">
+              Empowering you with comprehensive IT Solutions.
+              <br>
+            </p>
+            <a href="#hd"
+              ><button style="cursor: pointer; padding-inline: 60px;" class="stproject">
+                Explore
+              </button></a
+            >
           </div>
           <div class="BannerImg">
             <img src="pc.png" alt="" />
@@ -45,14 +54,14 @@
       </div>
       <div class="triangle" style="z-index: 0"></div>
       <main>
-        <h2 class="heading">
+        <h2 id="hd" class="heading">
           Let us Focus on Tech <br /><span class="light"
             >You Focus On What Truly Matters.</span
           >
         </h2>
         <p class="paragraph">
           We have experts ready to bring your Idea to life, all the way from our
-          kick off meeting to our final handoff.
+          kick off meeting to final handoff.
         </p>
         <section>
           <div class="services">
@@ -60,15 +69,17 @@
               <img src="webd.png" alt="" />
               <h3>Web & App Development</h3>
               <p>
-                We design all sorts of websites and Mobile Apps from personal to company.
+                We design all sorts of websites and Mobile Apps from personal to
+                company.
               </p>
             </div>
 
             <div class="card">
-              <img src="digitalm.png" alt="" />
+              <img style="width:40%;" src="digitalm.png" alt="" />
               <h3>Digital Marketing</h3>
               <p>
-                We manage marketing of your business online to boost your sales
+                We manage the marketing of your business online to boost your
+                sales.
               </p>
             </div>
 
@@ -76,7 +87,8 @@
               <img src="designing.png" alt="" />
               <h3>Graphics and Branding</h3>
               <p>
-                We Design Business cards, Posters, Logos, Flyers and all sorts Graphics products
+                We design Business Cards, Posters, Logos, Flyers and all sorts
+                of Graphics products.
               </p>
             </div>
           </div>
@@ -96,9 +108,8 @@
               <div class="info">
                 <h3>Creativity</h3>
                 <p>
-                  We specialize in being creative and creating something very unique
-                   that suites your desires. We try not to recreate repetitive work
-                   from others.
+                  We specialize in being creative. Together we will design
+                  something unique that suits your desires.
                 </p>
               </div>
             </div>
@@ -107,8 +118,8 @@
               <div class="info">
                 <h3>Commitment</h3>
                 <p>
-                  Once we have a contract we are committed to work on your project
-                   and deliver the product in time yet creating something beautiful
+                  We are committed to working on your project and delivering the
+                  final product on time and on budget.
                 </p>
               </div>
             </div>
@@ -117,8 +128,7 @@
               <div class="info">
                 <h3>Communication</h3>
                 <p>
-                  Our communication line are always up with a maximum response time of 12 hours.
-                  We keep communication between us and our clients open all the time.
+                  We keep communications between us and our clients open all the time.
                 </p>
               </div>
             </div>
@@ -129,65 +139,80 @@
           <div class="process">
             <div class="card">
               <img src="meeting.png" alt="" />
-              <h2>1. meeting</h2>
-              <p>We setup a meeting and discuss about your next big project</p>
+              <h2>1. Meeting</h2>
+              <p>We setup a meeting and discuss your next big project.</p>
             </div>
 
             <div class="card">
               <img src="planning.png" alt="" />
-              <h2>2. planning</h2>
-              <p>Our team comes up with a plan on how to work on your project</p>
+              <h2>2. Planning</h2>
+              <p>
+                Our team comes up with a plan on how to work on your project.
+              </p>
             </div>
 
             <div class="card">
               <img src="designing.png" alt="" />
               <h2>3. Designing</h2>
-              <p>A design to be used in your project is come up with </p>
+              <p>We work on a prototype design for your unique project.</p>
             </div>
             <div class="card">
               <img src="develop.png" alt="" />
               <h2>4. Development</h2>
-              <p>We then kick off development to deliver the best out of your project idea</p>
+              <p>
+                We kick off the Coding to deliver the best out of your
+                project idea.
+              </p>
             </div>
 
             <div class="card">
               <img src="deploy.png" alt="" />
               <h2>5. Deployment</h2>
-              <p>After Development is complete, we then deliver or launch your project</p>
+              <p>
+                After Coding is complete and you are happy that your vision has been realised, we then deliver or launch your
+                project.
+              </p>
             </div>
 
             <div class="card">
               <img src="support.png" alt="" />
               <h2>6. Support and Maintenance</h2>
-              <p>We support you and maintain for you your project from its release till our contract expires</p>
+              <p>
+                We offer 24/7 support and maintainance for your project from its
+                release.
+              </p>
             </div>
           </div>
         </section>
         <section style="padding-inline: 5%">
           <div class="reachus">
             <div class="info">
-              <h1 style="font-family: blocky; letter-spacing: 5px;">SC<span class="blue">E</span>C</h1>
-              <p>We have experts ready to bring your project to life</p>
+              <h1 style="font-family: blocky; letter-spacing: 5px">
+                SC<span class="blue">E</span>C
+              </h1>
+              <p>We have the experts ready to bring your project to life</p>
               <div class="contact">
-                <p>(256)708162770</p>
+                <p>(+256)708162770</p>
                 <p>tanish@scec.tech</p>
+                <a href="contact.html"
+                ><button
+                  style="
+                    border-radius: 5px;
+                    padding: 10px;
+                    padding-inline: 30px;
+                    background-color: #359af9;
+                    color: white;
+                    margin: 5px 0 10px 0;
+                    cursor: pointer;
+                  "
+                >
+                  Contact Us
+                </button></a
+              >
               </div>
             </div>
             <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.809932512003!2d32.56674887436962!3d0.11748596429849092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177d8fb396ef2bad%3A0xaff8dcb9fe0ee1a3!2skids%20pioneer%20school!5e0!3m2!1sen!2sug!4v1685106503468!5m2!1sen!2sug" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              <a href="contact.html"><button
-                style="
-                  border-radius: 5px;
-                  padding: 10px;
-                  padding-inline: 30px;
-                  background-color: #359af9;
-                  color: white;
-                  margin: 5px 0 10px 0;
-                  cursor: pointer;
-                "
-              >
-                Reach To Us
-              </button></a>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15959.240088663008!2d32.5690812!3d0.1168564!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177d8facfe517617%3A0xc0f205d116761762!2sscec%20technologies%20it%20solutions!5e0!3m2!1sen!2sug!4v1685716750091!5m2!1sen!2sug" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               
             </div>
           </div>
@@ -195,7 +220,10 @@
       </main>
     </div>
     <footer>
-      <center><span style="font-family: blocky; letter-spacing: 5px;">SCEC</span> TECHNOLOGIES</center>
+      <center>
+        <span style="font-family: blocky; letter-spacing: 5px">SCEC</span>
+        TECHNOLOGIES
+      </center>
     </footer>
     <script src="code.jquery.com_jquery-3.6.0.js"></script>
     <script>
@@ -203,9 +231,9 @@
         $("#menu").click(function () {
           $("#navi").toggleClass("active");
           if ($("#navi").hasClass("active")) {
-            $("#menu").attr("src","x.png");
-          }else{
-            $("#menu").attr("src","menu.png");
+            $("#menu").attr("src", "x.png");
+          } else {
+            $("#menu").attr("src", "menu.png");
           }
         });
       });
