--- a/public/contact.html
+++ b/public/contact.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D9MN94NZ8K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D9MN94NZ8K');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8621721957934319"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +22,8 @@
     <style>
       .body {
         height: 50%;
+        display: flex;
+        flex-direction: row;
       }
       .contacts {
         height: 50%;
@@ -199,7 +212,7 @@
           <div class="logo">SC<span class="blue">E</span>C</div>
           <ul id="navi">
             <a href="index.html"><li>Home</li></a>
-            <a href="services.html"><li>Services</li></a>
+            <a href="projects.html"><li>Projects</li></a>
             <a href="#" style="color:#359af9;"><li>Contact</li></a>
           </ul>
         </nav>
@@ -236,7 +249,7 @@
         </div>
       </div>
     </div>
-    <div class="triangle" style="z-index: 0"></div>
+
     <main>
       <h1>Start a conversation</h1>
       
