--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D9MN94NZ8K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D9MN94NZ8K');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8621721957934319"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,13 +28,14 @@
   </head>
   <body style="margin: 0">
     <div class="root">
+      <div class="top">We offer hosting plans for as low as UGx80,000</div>
       <div class="banner">
         <div class="nav">
           <nav>
-            <div class="logo">SC<span class="blue">E</span>C</div>
+            <div class="logo">SC<span class="blue">E</span>C <br><span class="lsmall">Technologies</span></div>
             <ul id="navi">
               <a href="#" style="color: #359af9"><li>Home</li></a>
-              <a href="services.html"><li>Services</li></a>
+              <a href="projects.html"><li>Projects</li></a>
               <a href="contact.html"><li>Contact</li></a>
             </ul>
           </nav>
@@ -32,27 +44,15 @@
           </div>
         </div>
         <div class="body">
-          <div class="BannerTitle">
-            <h1 style="font-family: blocky; letter-spacing: 5px">
-              SC<span class="blue">E</span>C
-            </h1>
-            <h2>TECHNOLOGIES</h2>
-            <p style="font-size: 1.3em">
-              Empowering you with comprehensive IT Solutions.
-              <br>
-            </p>
-            <a href="#hd"
-              ><button style="cursor: pointer; padding-inline: 60px;" class="stproject">
-                Explore
-              </button></a
-            >
+          <h1>You Dream it. We Build it.</h1>
+          <p>Empower your dreams with our expertise in modern technologies, turning ideas into tech-driven realities for your digital success.</p>
+          <div class="butns">
+            <a href="projects.html"><button>Our Projects</button></a>
+            <a href="contact.html"><button>Contact Us</button></a>
           </div>
-          <div class="BannerImg">
-            <img src="pc.png" alt="" />
-          </div>
+          
         </div>
       </div>
-      <div class="triangle" style="z-index: 0"></div>
       <main>
         <h2 id="hd" class="heading">
           Let us Focus on Tech <br /><span class="light"
