--- a/contact.html
+++ b/contact.html
@@ -253,7 +253,7 @@
     <main>
       <h1>Start a conversation</h1>
       
-      <form method="post" action="email.php" id="form">
+      <form id="form">
         <div class="row">
             <div class="in">
                 <label for="name">Full Names</label>
