--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     }
     .bst::before {
       content: "";
-      background-image: url(ship.png);
+      background-image: url(img/ship.png);
       background-repeat: no-repeat;
       background-size: contain;
       display: inline-block;
