--- a/index.html
+++ b/index.html
@@ -432,7 +432,9 @@
         <section class="second" id="abtus">
           <div class="info">
             <h1 class="headtext">
-              WE <span class="blue">DESIGN</span><br />DEVELOP<br /><span
+              WE <span class="blue">DESIGN</span><br />WE <span
+              class="blue"
+              >DEVELOP</span><br/>WE <span
                 class="blue"
                 >PROMOTE</span
               >
