--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <title>SCEC TECHNOLOGIES</title>
     <style>
+      html {
+  scroll-behavior: smooth;
+}
       @font-face {
         font-family: inter;
         src: url(font/inter.ttf);
@@ -529,7 +533,7 @@
               <a href="#work"><button>Explore</button></a>
             </div>
             <div class="img">
-              <img src="img/hero1.jpeg" alt="">
+              <img src="img/hero1-min.jpeg" alt="">
             </div>
           </div>
         </div>
