--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@ You Focus On What Truly Matters
           </div>
           <div class="contact-info" id="contact">
             <h4>Contact Us</h4>
-            <p>Email: info@scec.tech</p>
+            <p>Email: tanish@scec.tech</p>
             <p>Phone: +256 752 588 683</p>
             <p>Address: Bugiri, Kawuku, Uganda</p>
           </div>
